syntax = "proto3";
package szproduct;

option go_package = "github.com/senzing-garage/sz-sdk-go-grpc/szproduct";
option java_package = "com.senzing.sz.engine.grpc.SzProduct";
option java_outer_classname = "SzProductProto";

service SzProduct {
  rpc GetLicense (GetLicenseRequest) returns (GetLicenseResponse) {}
  rpc GetVersion (GetVersionRequest) returns (GetVersionResponse) {}
}

message GetLicenseRequest {}

message GetLicenseResponse {
  string result = 1;
}

message GetVersionRequest {}

message GetVersionResponse {
  string result = 1;
}
